--- a/app/src/main/res/layout/activity_widgets_actvity.xml
+++ b/app/src/main/res/layout/activity_widgets_actvity.xml
@@ -9,6 +9,7 @@
     android:gravity="center">
 
     <Button
+        android:id="@+id/btn_buton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Soy un boton"/>
@@ -20,30 +21,39 @@
         android:text="Soy un text view"/>
 
     <EditText
+        android:id="@+id/edit_text"
+        android:inputType="textPassword"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="Soy un editText"/>
 
     <CheckBox
+        android:id="@+id/checkbox"
+        android:checked="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Switch
+        android:id="@+id/swtch"
+        android:checked="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
 
     <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/option1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Primera opcion"/>
 
         <RadioButton
+            android:id="@+id/option2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Segunda opcion"/>
@@ -56,6 +66,32 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:max="20"/>
+
+    <RatingBar
+        android:id="@+id/rating_bar"
+        android:rating="2.5"
+        android:numStars="4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:progress="50"
+        />
+
+    <ToggleButton
+        android:id="@+id/toggle_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher_background"/>
 
 
 
