--- a/app/src/main/res/layout/activity_advanced_widgets.xml
+++ b/app/src/main/res/layout/activity_advanced_widgets.xml
@@ -5,5 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AdvancedWidgetsActivity">
+b
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/menu"
+        app:labelVisibilityMode="selected"
+        app:itemIconTint="@color/design_default_color_primary"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
