--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_favorite"
-        android:title="Favorite"
+        android:title="Favorito"
         android:icon="@drawable/ic_baseline_favorite_24"
         app:showAsAction="ifRoom"
         android:iconTint="@color/white"
