--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,11 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_advanced_elements"/>
 
+    <Button
+        android:id="@+id/btn_drawer"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DRAWER LAYOUT"/>
+
 </LinearLayout>
